@@ -24,6 +24,7 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 	- modified ticalcs2 library consequently. Reverted back previous change again and clean-up.
 	- set all custom dialog boxes to GTK_WIN_POS_MOUSE instead of GTK_WIN_POS_NONE
 	- set all modal dialog boxes to GTK_WIN_POS_MOUSE instead of GTK_WIN_POS_NONE
+	- raise a information message when Linux user choose Titanium/USB.
 
 - 26/08/2006, version 0.23 (0.1.4, 0.2.6, 0.2.7, 0.0.5): roms
 	- source code is frozen: entering in testing phase
